<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_shoes">Add Shoes</string>
    <string name="name">Name</string>
    <string name="company">company</string>
    <string name="size">size</string>
    <string name="description">Description</string>
    <string name="save">save</string>
    <string name="log_out">Log Out</string>
    <string name="welcomeTitle">Make your Style</string>
    <string name="welcomeSubTitle">Wear the nicest shoes in the most exquisite styles to portray more assurance</string>
    <string name="start">start</string>
    <string name="instructionsTitle">First-Rate Assortment</string>
    <string name="instructionsSubTitle">discover our new brands, collections, and shapes and styles.</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="back">back</string>
</resources>
