<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".login"
    android:padding="@dimen/wide">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/wide"
        android:background="@drawable/login_background">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:paddingHorizontal="@dimen/wide"
            android:background="@drawable/input_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:layout_marginVertical="@dimen/wide"
            android:background="@drawable/input_background"
            android:paddingHorizontal="@dimen/wide"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

    </LinearLayout>


    <Button
        android:id="@+id/login"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>