<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Instruction"
    android:padding="@dimen/wide">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/wide"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/button_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_store"
            android:layout_gravity="start"
            style="@style/titleText"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/image"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructionsTitle"
            style="@style/titleText"
            android:layout_marginVertical="@dimen/wide"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructionsSubTitle"
            style="@style/subTitleText"
            />

    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/button_style"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>