<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- Use constrain layout to make me can put the items where ever i want-->
    <!-- like the text View -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome"
    android:background="@drawable/background"
    android:padding="@dimen/wide">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        style="@style/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/welcomeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/subTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeSubTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/go"
        style="@style/button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/let_s_go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>